# slowhand-rs

./: .gitignore  Cargo.toml  README.md  movies.json
.cargo/: config.toml
js/: package-lock.json  package.json  schema.kdl  t1.js
projects/movies/: movies.kdl  movies.yaml
resources/: schema.sql
src/: assets.rs  config.rs  dataset.rs  dataset_handler.rs  gql.rs  kdl_schema.rs  main.rs  schema.rs  schema_gql.rs  schema_kdl.rs  store.rs  trash.rs
src/learn/: t1.rs  t2.rs  t3.rs
src/sdl/: config.styx  config0.styx  kdl0.rs  kdlrs.rs  styx.rs
