[package]
name = "slowhand"
version = "0.1.0"
edition = "2021"

default-run = "slowhand"

[[bin]]
name = "slowhand"
path = "src/main.rs"

[[bin]]
name = "kdl"
path = "src/sdl/kdl.rs"

[[bin]]
name = "kdlrs"
path = "src/sdl/kdlrs.rs"

[[bin]]
name = "styx"
path = "src/sdl/styx.rs"

[dependencies]
tokio = { version = "1.49.0", features = ["full"] }
turso = "0.4.3"
knus = "3.3.1"
miette = { version = "7.6.0", features = ["fancy"] }
facet = "0.43.2"
facet-styx = "1.0.1"
kdl = "6.5.0"
serde_json = "1.0.149"
serde = { version = "1.0.228", features = ["derive"] }
strum = "0.27.2"
strum_macros = "0.27.2"
rand = "0.9.2"
base64 = "0.22.1"
axum = { version = "0.8.8", features = ["macros", "multipart"] }
anyhow = "1.0.100"
tokio-stream = { version = "0.1.18", features = ["io-util", "sync"] }
tokio-util = { version = "0.7.18", features = ["io"] }
futures-util = "0.3.31"
async-graphql = "7.2.1"
